Fix Spacing more

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *, *:before, *:after {
-    box-sizing: border-box; padding: 0; margin: 0;
+    box-sizing: border-box; padding: 0;
     font-family: 'exo', 'Unispace', 'PT Mono';
     font-size: 1.3rem;
     color: #f76a6a;
@@ -12,16 +12,16 @@
 
 body {
     background-color: #2b2b2b;
+    display: flex;
+    justify-content: center;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    width: 95vw;
-    height: 95vh;
+    margin-top: 10vh;
+    width: 50vw;
+    height: 50vh;
     justify-content: center;
     align-items: center;
-    align-content: center;
 }
 
 canvas {
@@ -40,6 +40,7 @@ canvas {
 }
 
 #score {
+    margin: 0;
     text-align: center;
     font-size: 2em;
     text-decoration: underline;
